<resources>
    <string name="app_name">MySejahtera</string>
    <string name="my_sejahtera">MySejahtera</string>
    <string name="get_started">Get Started</string>
    <string name="sign_in">Sign In</string>
    <string name="dashboard">Dashboard</string>
    <string name="faq">FAQ</string>`
    <string name="scan_qr">Scan Qr</string>
    <string name="statistic">Statistic</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="username">Hi Asher Chan</string>
    <string name="cases_descrip">There are 25 Covid cases reported near you within 1km</string>
    <string name="new_cases">4,500</string>
    <string name="case_increment">New cases +5%</string>
    <string name="vaccine">2,222</string>
    <string name="vaccine_descrip">New Vaccination</string>
    <string name="vaccine_brand">AstraZeneca Vaccine</string>
    <string name="registration">Registration are now open</string>
    <string name="vaccine_slot">400,00 slots left</string>
    <string name="update_profile">Update Profile</string>
    <string name="vaccine_education">Vaccine Education</string>
    <string name="emergency_quick_dial">Emergency Quick Dial</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="tenish">Tenish</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="statistic_back">statistic_back</string>
    <string name="statistics">Statistics</string>
    <string name="today">Today</string>
    <string name="confirmed">Confirmed</string>
    <string name="_5244">5244</string>
    <string name="recovered">Recovered</string>
    <string name="_6372">6372</string>
    <string name="deaths">Deaths</string>
    <string name="_83">83</string>
    <string name="active">Active</string>
    <string name="_60">60</string>
    <string name="total_confirmed_cases">Total Confirmed Cases</string>
    <string name="_711_006">711, 006</string>
    <string name="total_recovered_case">Total Recovered Case</string>
    <string name="_650_969">650,969</string>
    <string name="total_active_cases">Total Active Cases</string>
    <string name="_61_162">61,162</string>
    <string name="total_deaths_cases">Total Deaths Cases</string>
    <string name="_4_721">4,721</string>
    <string name="notifications_back">notifications back</string>
    <string name="expand_icon">expand_icon</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello,</string>
    <string name="check_in_history">Check-In History</string>
    <string name="vaccine_title">Vaccine</string>
    <string name="sign_out">Sign Out</string>
    <string name="details">Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="john_cena">John Cena</string>
    <string name="field_name">Name:</string>
    <string name="nric">NRIC:</string>
    <string name="_010203_07_0321">010203-07-0321</string>
    <string name="phone_number">Phone Number:</string>
    <string name="_60_12_345_6789">+60 12-345 6789</string>
    <string name="address">Address</string>
    <string name="state">State:</string>
    <string name="penang">Penang</string>
    <string name="city">City:</string>
    <string name="georgetown">Georgetown</string>
    <string name="post_code">Post Code:</string>
    <string name="_10050">10050</string>
    <string name="line_1">Line 1:</string>
    <string name="jalan_road">Jalan Road</string>
    <string name="line_2">Line 2:</string>
    <string name="_5_mansion_6b">5, Mansion 6B</string>
    <string name="malaysia_s_fight_against_covid_19">Malaysia\'s fight against Covid-19</string>
    <string name="registred_amount">12,117,091</string>
    <string name="vaccinated_amount">1,944,458</string>
    <string name="registered">registered</string>
    <string name="vaccinated">vaccinated</string>
    <string name="register_now">Register now</string>
    <string name="what_you_need_to_know">What you need to know</string>
    <string name="learn_how_vaccines_work_amp_how_it_can_save_your_life"><![CDATA[Learn how vaccines work & how it can save your life]]></string>
    <string name="scan">Scan</string>
    <string name="place_the_qr_code_inside_the_area">Place the QR code inside the area</string>
    <string name="scanning_will_start_automatically">Scanning will start automatically</string>
    <string name="scan_qr_button_text">Scan QR</string>
    <string name="press_button_to_scan_qr">Press button to scan QR</string>
    <string name="asher_chan">Asher Chan</string>
    <string name="vaccine_title_page">Vaccine</string>
    <string name="vaccination_details">Vaccination Details</string>
    <string name="_24_05_2021">24/05/2021</string>
    <string name="setia_spice_level_1">Setia Spice, Level 1</string>
    <string name="registered_text">Registered</string>
    <string name="approved_text">Approved</string>
    <string name="_1st_dose_complete">1st Dose Complete</string>
    <string name="_2nd_dose_complete">2nd Dose Complete</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_profile">Edit Profile</string>

</resources>