<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/nav_notification"
        android:icon="@drawable/ic_outline_question_answer_24"
        android:title="@string/faq" />

    <item
        android:id="@+id/nav_scan_qr"
        android:icon="@drawable/ic_outline_qr_code_scanner_24"
        android:title="@string/scan_qr" />

    <item
        android:id="@+id/nav_statistic"
        android:icon="@drawable/ic_outline_pie_chart_24"
        android:title="@string/statistic" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_outline_person_24"
        android:title="@string/profile" />


</menu>